--- a/css.CSS
+++ b/css.CSS
@@ -9,7 +9,7 @@ html, body {
     overflow: hidden;
 }
 /*
-body { this is not working x)
+body { // this is not working x)
     
     
     text-shadow: 0 0 1px #000, 0 0 2px #000;
